--- a/src/docs/asciidoc/road-to-immutability/070-modification-part2.adoc
+++ b/src/docs/asciidoc/road-to-immutability/070-modification-part2.adoc
@@ -258,8 +258,11 @@ This is clearly visible in the explicit variant...
 <3> Now, we have a container, because in the anonymous type does not modify its parameters.
 <4> Explicitly visible here in `explicitPrinter`.
 <5> If we insist that all parameters are containers, ...
-<6> we can detect errors.
+<6> We can use the annotations to detect errors.
 Here, `incrementer` is not a container.
+
+Using the {container} annotation in a dynamic way allows us to control which abstract types can use the method:
+when only containers are allowed, then the abstract types must not have implementations which change their parameters.
 
 //end of file
 
