--- a/src/docs/asciidoc/manual/010-intro.adoc
+++ b/src/docs/asciidoc/manual/010-intro.adoc
@@ -4,3 +4,4 @@ Main website: https://www.e2immu.org.
 == Introduction
 
 WARNING: This document is work in progress.
+In some places, it is nothing but a skeleton.
